[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "SumbumsTeaTime"
description = "sum thang from nuttin!"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "mildmill2", email = "mildother2@gmail.com"}]
keywords = ["nbdev", "jupyter", "notebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
dependencies = []

[project.urls]
Repository = "https://github.com/mildmill2/{repo}"
Documentation = "https://mildmill2.github.io/SumbumsTeaTime/"

[tool.setuptools.dynamic]
version = {attr = "{lib_path}.__version__"}

[tool.setuptools.packages.find]
include = ["{lib_path}"]

[tool.nbdev]
nbs_path = "."
doc_path = "_docs"
recursive = false