# Cell: Update pyproject.toml configuration for nbdev3 standard
toml_content = """[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "SumbumsTeaTime"
description = "sum thang from nuttin!"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "mildhorton", email = "mildrien_i_horton@proton.com"}]
keywords = ["nbdev", "jupyter", "notebook", "quantum", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.110.0",
    "fasthx>=0.0.1",
    "pennylane>=0.45.0",
    "qbraid>=0.12.1",
    "nibabel>=5.2.0",
    "torch>=2.12.0",
    "transformers>=5.9.0"
]

[project.urls]
Repository = "https://github.com/mildhorton/SumbumsTeaTime"
Documentation = "https://mildhorton.github.io/SumbumsTeaTime/"

[tool.setuptools.dynamic]
version = {attr = "SumbumsTeaTime.__version__"}

[tool.setuptools.packages.find]
include = ["SumbumsTeaTime"]

[tool.nbdev]
nbs_path = "nbs"
doc_path = "_docs"
lib_path = "SumbumsTeaTime"
recursive = "True"
"""

with open("pyproject.toml", "w") as f:
    f.write(toml_content)

print("✅ pyproject.toml successfully configured with your library settings and active dependencies!")